@@ -1,0 +1,153 @@
+//============================================================================
+//
+//   SSSS    tt          lll  lll       
+//  SS  SS   tt           ll   ll        
+//  SS     tttttt  eeee   ll   ll   aaaa 
+//   SSSS    tt   ee  ee  ll   ll      aa
+//      SS   tt   eeeeee  ll   ll   aaaaa  --  "An Atari 2600 VCS Emulator"
+//  SS  SS   tt   ee      ll   ll  aa  aa
+//   SSSS     ttt  eeeee llll llll  aaaaa
+//
+// Copyright (c) 1995-2012 by Bradford W. Mott, Stephen Anthony
+// and the Stella Team
+//
+// See the file "License.txt" for information on usage and redistribution of
+// this file, and for a DISCLAIMER OF ALL WARRANTIES.
+//
+// $Id$
+//============================================================================
+
+#ifndef CARTRIDGEFA2_HXX
+#define CARTRIDGEFA2_HXX
+
+class System;
+
+#include "bspf.hxx"
+#include "Cart.hxx"
+
+/**
+  This is an extended version of the CBS RAM Plus bankswitching scheme
+  supported by the Harmony cartridge.
+  
+  There are six 4K banks and 256 bytes of RAM.
+
+  @author  Chris D. Walton
+  @version $Id$
+*/
+class CartridgeFA2 : public Cartridge
+{
+  public:
+    /**
+      Create a new cartridge using the specified image
+
+      @param image     Pointer to the ROM image
+      @param size      The size of the ROM image
+      @param settings  A reference to the various settings (read-only)
+    */
+    CartridgeFA2(const uInt8* image, uInt32 size, const Settings& settings);
+ 
+    /**
+      Destructor
+    */
+    virtual ~CartridgeFA2();
+
+  public:
+    /**
+      Reset device to its power-on state
+    */
+    void reset();
+
+    /**
+      Install cartridge in the specified system.  Invoked by the system
+      when the cartridge is attached to it.
+
+      @param system The system the device should install itself in
+    */
+    void install(System& system);
+
+    /**
+      Install pages for the specified bank in the system.
+
+      @param bank The bank that should be installed in the system
+    */
+    bool bank(uInt16 bank);
+
+    /**
+      Get the current bank.
+    */
+    uInt16 bank() const;
+
+    /**
+      Query the number of banks supported by the cartridge.
+    */
+    uInt16 bankCount() const;
+
+    /**
+      Patch the cartridge ROM.
+
+      @param address  The ROM address to patch
+      @param value    The value to place into the address
+      @return    Success or failure of the patch operation
+    */
+    bool patch(uInt16 address, uInt8 value);
+
+    /**
+      Access the internal ROM image for this cartridge.
+
+      @param size  Set to the size of the internal ROM image data
+      @return  A pointer to the internal ROM image data
+    */
+    const uInt8* getImage(int& size) const;
+
+    /**
+      Save the current state of this cart to the given Serializer.
+
+      @param out  The Serializer object to use
+      @return  False on any errors, else true
+    */
+    bool save(Serializer& out) const;
+
+    /**
+      Load the current state of this cart from the given Serializer.
+
+      @param in  The Serializer object to use
+      @return  False on any errors, else true
+    */
+    bool load(Serializer& in);
+
+    /**
+      Get a descriptor for the device name (used in error checking).
+
+      @return The name of the object
+    */
+    string name() const { return "CartridgeFA2"; }
+
+  public:
+    /**
+      Get the byte at the specified address.
+
+      @return The byte at the specified address
+    */
+    uInt8 peek(uInt16 address);
+
+    /**
+      Change the byte at the specified address to the given value
+
+      @param address The address where the value should be stored
+      @param value The value to be stored at the address
+      @return  True if the poke changed the device address space, else false
+    */
+    bool poke(uInt16 address, uInt8 value);
+
+  private:
+    // Indicates which bank is currently active
+    uInt16 myCurrentBank;
+
+    // The 24K ROM image of the cartridge
+    uInt8 myImage[24576];
+
+    // The 256 bytes of RAM on the cartridge
+    uInt8 myRAM[256];
+};
+
+#endif
